feat: enhance LLM configuration and API logging capabilities
- Added support for DeepSeek API in the configuration and environment setup.
- Introduced new functions for validating role mappings and creating LLM instances.
- Updated retry handler to differentiate between overload and quota exceeded errors.
- Enhanced API logging to track LLM instance creation and API calls.
- Modified example environment configuration to include DeepSeek API key and models.

--- a/config.example.env
+++ b/config.example.env
@@ -10,6 +10,10 @@ GOOGLE_API_KEY=your_google_api_key_here
 # OpenAI API Key（用於 GPT 模型，可選）
 OPENAI_API_KEY=your_openai_api_key_here
 
+# DeepSeek API Key（用於 DeepSeek 模型，可選）
+# 申請地址：https://platform.deepseek.com/api_keys
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+
 # ============================================
 # 每個 Role 的 LLM 類型配置
 # 可選值: "api" 或 "local"
@@ -27,7 +31,7 @@ ARCHITECT_LLM_TYPE=api
 DEVELOPER_LLM_TYPE=api
 
 # Reviewer - 評審工程師
-REVIEWER_LLM_TYPE=api
+REVIEWER_LLM_TYPE=local
 
 # Technical - 技術支援
 TECHNICAL_LLM_TYPE=local
@@ -35,41 +39,41 @@ TECHNICAL_LLM_TYPE=local
 # ============================================
 # 每個 Role 的模型配置（可選，使用預設值）
 # ============================================
-# Product Manager API 模型
-# PRODUCT_MANAGER_API_MODEL=gemini/gemini-2.0-flash
+# Product Manager API 模型（使用 DeepSeek）
+# PRODUCT_MANAGER_API_MODEL=deepseek/deepseek-chat
 
 # Product Manager Local 模型
 # PRODUCT_MANAGER_LOCAL_MODEL=ollama/llama3.3:70b
 
-# Designer API 模型
-# DESIGNER_API_MODEL=gemini/gemini-2.0-flash
+# Designer API 模型（使用 DeepSeek）
+# DESIGNER_API_MODEL=deepseek/deepseek-chat
 
 # Designer Local 模型
 # DESIGNER_LOCAL_MODEL=ollama/llama3.3:70b
 
-# Architect API 模型
-# ARCHITECT_API_MODEL=gemini/gemini-2.0-flash
+# Architect API 模型（使用 DeepSeek）
+# ARCHITECT_API_MODEL=deepseek/deepseek-chat
 
 # Architect Local 模型
 # ARCHITECT_LOCAL_MODEL=ollama/deepseek-coder:33b
 
-# Developer API 模型
-# DEVELOPER_API_MODEL=gemini/gemini-2.0-flash
+# Developer API 模型（使用 DeepSeek）
+# DEVELOPER_API_MODEL=deepseek/deepseek-chat
 
 # Developer Local 模型
 # DEVELOPER_LOCAL_MODEL=ollama/deepseek-coder:33b
 
-# Reviewer API 模型
+# Reviewer API 模型（備用）
 # REVIEWER_API_MODEL=gemini/gemini-2.0-flash
 
-# Reviewer Local 模型
-# REVIEWER_LOCAL_MODEL=ollama/llama3.3:70b
+# Reviewer Local 模型（使用 gemma:4b）
+# REVIEWER_LOCAL_MODEL=ollama/gemma:4b
 
-# Technical API 模型
+# Technical API 模型（備用）
 # TECHNICAL_API_MODEL=gemini/gemini-2.0-flash
 
-# Technical Local 模型
-# TECHNICAL_LOCAL_MODEL=ollama/llama3.2:3b
+# Technical Local 模型（使用 gemma:4b）
+# TECHNICAL_LOCAL_MODEL=ollama/gemma:4b
 
 # ============================================
 # 重試配置（可選，使用預設值）
