feat: add GUI interface and enhance project structure

--- a/config.example.env
+++ b/config.example.env
@@ -66,14 +66,14 @@ TECHNICAL_LLM_TYPE=local
 # Reviewer API 模型（備用）
 # REVIEWER_API_MODEL=gemini/gemini-2.0-flash
 
-# Reviewer Local 模型（使用 gemma:4b）
-# REVIEWER_LOCAL_MODEL=ollama/gemma:4b
+# Reviewer Local 模型（使用 gemma3:4b）
+# REVIEWER_LOCAL_MODEL=ollama/gemma3:4b
 
 # Technical API 模型（備用）
 # TECHNICAL_API_MODEL=gemini/gemini-2.0-flash
 
-# Technical Local 模型（使用 gemma:4b）
-# TECHNICAL_LOCAL_MODEL=ollama/gemma:4b
+# Technical Local 模型（使用 gemma3:4b）
+# TECHNICAL_LOCAL_MODEL=ollama/gemma3:4b
 
 # ============================================
 # 重試配置（可選，使用預設值）
